# RxNExtract

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
ANALYSIS/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
INSTALLATION/: index.html
USAGE/: index.html
config/: config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  INSTALLATION.md  USAGE.md  index.md
examples/: advanced_usage.py  basic_usage.py  batch_processing.py  custom_prompts.py  quickstart.ipynb
scripts/: run_batch.py  run_error_analysis.py  run_example.py  run_interactive.py
search/: search_index.json
src/chemistry_llm/: __init__.py
src/chemistry_llm/analysis/: ablation_analysis.py  error_analysis.py  metrics.py  statistical_analysis.py  ucq_module.py
src/chemistry_llm/cli/: __init__.py  interface.py
src/chemistry_llm/core/: __init__.py  extractor.py  model_loader.py  prompt_builder.py
src/chemistry_llm/utils/: __init__.py  device_utils.py  logger.py  xml_parser.py
tests/: __init__.py  test_extractor.py  test_xml_parser.py
tests/fixtures/: sample_procedures.txt
